# enca

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  ChangeLog.prelib  DEVELOP.md  ENCA-ADD-LANGUAGE-GUIDE.md  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.devel  README.md  THANKS  TODO  aclocal.m4  autogen.sh  ch01.html  config.h.in  configure  configure.ac  enca.spec  enca.spec.in  iconvcap.c  index.html  index.sgml  libenca-Analyser.html  libenca-Auxiliary-Functions.html  libenca-Charsets-and-Surfaces.html  libenca-Typedefs-and-Constants.html  topline.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  msys2.yml  test.yml
data/: .gitignore  Makefile.am  Makefile.in  README  clean.sh  countall.c  makepaircounts.sh  normalize.pl
data/chinese/: chinese.h
deb/: changelog  control  copyright  docs  enca.dirs  enca.files  libenca-dev.dirs  libenca-dev.doc-base  libenca-dev.files  postinst  postrm  preinst  prerm  rules  watch
devel-docs/: .gitignore  Makefile.am  Makefile.in  libenca-decl-list.txt  libenca-decl.txt  libenca-sections.txt  libenca-undeclared.txt  libenca-undocumented.txt  libenca-unused.txt
lib/: Makefile.am  Makefile.in  common.c  ctype.c  enca.c  enca.h  encnames.c  filters.c  guess.c  internal.h  lang.c  lang_be.c  lang_bg.c  lang_cs.c  lang_et.c  lang_fi.c  lang_hr.c  lang_hu.c  lang_lt.c  lang_lv.c  lang_pl.c  lang_ru.c  lang_sk.c  lang_sl.c  lang_uk.c  lang_zh.c  multibyte.c  pair.c  unicodemap.c  utf8_double.c
m4/: gcov.m4  libiconv.m4  librecode.m4  typevar.m4
man/: enca.1
script/: .gitignore  Makefile.am  Makefile.in  b-cstocs.in  b-map.in  b-piconv.in  b-recode  b-umap.in
src/: .gitignore  HELP.in  Makefile.am  Makefile.in  common.h  convert.c  convert_extern.c  convert_iconv.c  convert_recode.c  enca.c  filebuf.c  getopt.h  locale_detect.c  options.c
test/: .gitignore  Makefile.am  Makefile.in  cs-s.ambi  cs-s.tex  fi-s.cp1257  fi-s.iso88594  fi-s.utf8  finish.sh  none-s.ucs2be.bom  none-s.ucs2be.bom.crlf  none-s.ucs2be.bom.noeol  setup.sh  simtable.c  test-ENCAOPT.sh  test-aliases.sh  test-convert-64.sh  test-convert-filter.sh  test-convlist.sh  test-default-cs.sh  test-empty.sh  test-errors.sh  test-external.sh  test-guess-short.expected  test-guess-short.sh  test-guess-stdin.msys2.expected  test-guess-stdin.sh  test-guess-unknown.sh  test-guess-utf8.sh  test-iconv.sh  test-lists.sh  test-locale.sh  test-long-texts.sh  test-pP.sh  test-recode.sh  test-simtable.sh  test-tex.sh
tools/: .gitignore  Makefile.am  Makefile.in  encodings.h  iconvenc.null  make_hash.c
(+28 files in other folders)
